2007-02-15  Leonardo Boshell  <lb@kmc.com.co>

	* gda-sharp/Gda.metadata:
	* gda-sharp/gda-api.raw: Updated the .raw file due to recent API
	changes, and fixed a conflict in the name resolution of the "reset"
	signal with the _reset() function in GdaDataModel. Fixes the compilation
	of the C# bindings as described on bug #407064.

2007-02-15  Murray Cumming  <murrayc@murrayc.com>

	* doc/C/libgda-3.0-docs.sgml:
	* libgda/gda-connection.c:
	* libgda/gda-data-model.c:
	* libgda/gda-dict-field.c:
	* libgda/gda-init.c:
	* libgda/gda-server-provider-extra.c:
	* providers/oracle/gda-oracle-provider.c: (process_oci_statement):
	* providers/postgres/gda-postgres-provider.c:
	(split_and_execute_update_query): Use affect* instead of impact* in 
	documentation, when referring to rows affected by commands, 
	because that is more normal English in this context.

2007-02-14  Armin Burgmeier  <armin@openismus.com>

	* libgda/gda-dict-database.h: Changed type of msg parameter in
	update_progress signal handler from gchar * to const gchar *.

2.99.5:

2007-02-12  Murray Cumming  <murrayc@murrayc.com>

	* libgda/gda-graphviz.c: (render_qf_value_label):
	* libgda/gda-query-field-value.c:
	(gda_query_field_value_get_parameter_index):
	* libgda/gda-query-parsing.c: (parsed_create_value_query_field):
	* libgda/gda-query.c: (gda_query_get_field_by_param_name):
	Correct the name of gda_query_field_value_get_is_parameter() when used here too.

2007-02-12 Murray Cumming  <murrayc@murrayc.com>

	* libgda/gda-query-field-value.c:
	(gda_query_field_value_get_is_parameter): Rename the function here, instead of just 
	renaming it in the header file, to fix the linker error when trying to use this function.

2.99.4:

2007-02-12  Murray Cumming  <murrayc@murrayc.com>

	* INSTALL: Added this file to svn.
	* Makefile.am: Always mention gda-sharp in SUBDIRS so that its contents can be included in 
	the dist.
	* gda-sharp/Makefile.am: Move the if conditional here from Makefile.am, but always dist the 