@@ -1,3 +1,9 @@
+2007-02-15  Murray Cumming  <murrayc@murrayc.com>
+
+	* libgda/gda-data-proxy.c: (gda_data_proxy_append): Initialize the GValue as 
+	containing flags, so that g_value_set_flags() does not fail (with a g_warning) 
+	later.
+
 2007-02-15  Leonardo Boshell  <lb@kmc.com.co>
 
 	* gda-sharp/Gda.metadata:
